# brainform-skills

./: .env.example  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: help-me.md  personalize-email.md
.claude/skills/follow-up/: SKILL.md
.claude/skills/follow-up/references/: anti_ai_patterns.md  follow_up_principles.md  segment_briefings.md
.claude/skills/getsales-audit-send/: SKILL.md
.claude/skills/getsales-audit-send/references/: message_template.md
.claude/skills/lead-pipeline/: SKILL.md
.claude/skills/outreach/: SKILL.md
.claude/skills/outreach-db/references/: System-documentation.md  n8n-code-nodes.js
.claude/skills/outreach/references/: email_template.md  role_briefings.md  value_props.md
.claude/skills/outreach/scripts/: extract_audit_summary.py  lookup_contact.py
.claude/skills/post-writer/: SKILL.md  step2_skeleton.md  step3_draft.md  step4_structural_review.md
.claude/skills/reply-handler/: skill.md
dev/scripts/: export_contacts.py  generate_agency_categories.py  generate_product_categories.py  import_companies.py  import_contacts.py  import_getsales.py  normalize_company_names.py  segment_agencies.py  segment_companies.py  sync_getsales.py  verify_emails_mv.py
outreach-db/: SKILL.md
outreach-db/references/: functions.sql  views.sql
post-writer/: step1_idea_crystallization.md  step5_anti_ai_cleanup.md
